contrast correction

--- a/lesson3/css/small.css
+++ b/lesson3/css/small.css
@@ -338,31 +338,37 @@ p {
 .typo :nth-child(2) {
     grid-row: 2;
     grid-column: 1/2;
+    color: white;
 }
 
 .typo :nth-child(3) {
     grid-row: 3;
     grid-column: 1/2;
+    color: white;
 }
 
 .typo :nth-child(4) {
     grid-row: 4;
     grid-column: 1/2;
+    color: white;
 }
 
 .typo :nth-child(6) {
     grid-row: 2;
     grid-column: 2/3;
+    color: white;
 }
 
 .typo :nth-child(7) {
     grid-row: 3;
     grid-column: 2/3;
+    color: white;
 }
 
 .typo :nth-child(8) {
     grid-row: 4;
     grid-column: 2/3;
+    color: white;
 }
 
 
